--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/components/main.tsx"></script>
+    <script type="module" src="/src/components/Main.tsx"></script>
   </body>
 </html>
